# silent-shitler

./: .gitignore  README.md  REPORT.md  pyproject.toml
agents/: meta_agent.py  random_agent.py  selfish_agent.py  test_agents.py
agents/cfr/: __init__.py  cfr_agent.py  infoset.py  infoset_simple.py  trainer.py
agents/deeprole/: README.md  README_agent.md  TERMINAL_VALUES_UPDATE.md  __init__.py  backwards_training.py  belief.py  belief_update.py  belief_with_strategies.py  debug_empty_legal.py  debug_empty_mask.py  debug_illegal_actions.py  debug_mask_issue.py  debug_regret_bug.py  debug_regret_init.py  deeprole_agent.py  deeprole_agent_v2.py  estimate_runtime.py  game_state.py  gameplay_solver.py  generate_data.py  generate_data_batch.sh  generate_data_batch_gpu.sh  generate_data_fast.py  generate_data_resumable.py  networks.py  role_assignments.py  situation_sampler.py  slurm-7131886.out  slurm-7131962.out  slurm-7131992.out  slurm-7132021.out  slurm-7132021_8192.out  slurm-7132461.out  terminal_value_cfr.py  test_imports.py  test_infoset_fix.py  train.py  vector_cfr.py  verify_terminal_diversity.py
agents/ppo/: __init__.py  agent_wrapper.py  asymmetric_mappo_agent.py  asymmetric_ppo_agent.py  buffer.py  (+7 more)
experiments/: baseline.py  eval_trained_vs_trained.py  test_game_interface.ipynb  train_mappo_asymmetric.py  train_mappo_symmetric.py  train_ppo.py  train_ppo_asymmetric.py
research_logs/: meta_info.md  research_logs.md  serrino_et_al.md  serrino_et_al_pseudocode.md
shitler-env/: game.py
shitler_env/: agent.py  eval_agent.py  game.py
utils/: evaluation.py
(+227 files in other folders)
