[project]
name = "silent-shitler"
version = "0.1.0"
description = "Learning algorithms for silent social deduction games"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
    "pettingzoo>=1.25.0",
    "ray[rllib]>=2.52.1",
    "ruff>=0.14.3",
    "supersuit>=3.10.0",
    "torch>=2.9.1",
    "wandb>=0.23.0",
]
